--- a/_config.yml
+++ b/_config.yml
@@ -5,18 +5,18 @@ permalink:           pretty
 relative_permalinks: true
 
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+title:               Nicholas Dechert
+tagline:             'Programming, Web Development, and Information Security'
+description:         'Learning by doing, and teaching along the way'
+url:                 claymore2106.github.io
 baseurl:             ''
 paginate:            5
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Nicholas Dechert
+  url:               claymore2106.github.io
+  email:             dechert.nicholas@gmail.com
 
 # Custom vars
-version:             1.0.0
+# version:             1.0.0
