--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Permalinks
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
-permalink:           :url/:title/
-# relative_permalinks: true
+# permalink:           :url/:title/
+relative_permalinks: true
 
 # Setup
 title:               Nicholas Dechert
