--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title:               Nicholas Dechert
 tagline:             'Programming, Web Development, and Information Security'
 description:         'Learning by doing, and teaching along the way'
 url:                 https://claymore2106.github.io
-baseurl:             'https://claymore2106.github.io'
+baseurl:             ''
 paginate:            5
 
 # About/contact
