--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@
 title:               Nicholas Dechert
 tagline:             'Programming, Web Development, and Information Security'
 description:         'Learning by doing, and teaching along the way'
-# url:                 claymore2106.github.io
-baseurl:             '/claymore2106.github.io'
+url:                 https://claymore2106.github.io
+baseurl:             ''
 paginate:            5
 
 # About/contact
